参与的项目

--- a/juheshop/html/home.html
+++ b/juheshop/html/home.html
@@ -33,7 +33,7 @@
                         <a class="w_right_a" href=""><span>我的财富</span><i class="w_right_pic"></i></a>
                         <div class="clear"></div>
                         <div class="w_right_a_list">
-                            <a href="couponcenter.html">我的优惠券</a>
+                            <a href="">我的优惠券</a>
                             <a href="">我的积分</a>
                             <a href="">信用管理</a>
                         </div>
@@ -64,7 +64,7 @@
     <div class="home-header">
         <div class="h">
             <div class="h_left" id="WantAgentDIV">
-                <a href="home.html"><div class="h_left_logo" style="background:url(../img/logo.png) left center no-repeat;background-size:100% ;"></div></a>
+                <a href=""><div class="h_left_logo" style="background:url(../img/logo.png) left center no-repeat;background-size:100% ;"></div></a>
             </div>
             <div class="h_from">
                 <form class="searchform" target="_blank" action="" method="post" autocomplete="off">
@@ -108,7 +108,7 @@
                 <div class="nav-cover"></div>
                 <ul class="index-list">
                     <li data_code="11" class="">
-                        <i class="" style="background: url(../img/list-1.png);" data_hover="url(../img/list-1-1.png)"></i>
+                        <i class="" style="background: url(../img/list-1.png);" data_def="url(../img/list-1.png)" data_hover="url(../img/list-1.png)"></i>
                         <a target="_blank" href=""><em>/</em><span>教学科研</span></a>
                         <a target="_blank" href=""><em>/</em><span>高教</span></a>
                         <a target="_blank" href=""><em>/</em><span>普教</span></a>
@@ -116,7 +116,7 @@
                         <a target="_blank" href=""><em>/</em><span>学前</span></a>
                     </li>
                     <li data_code="2101" class="">
-                        <i class="" style="background: url(../img/list-2.png);" data_def="url()" data_hover="url()"></i>
+                        <i class="" style="background: url(../img/list-2.png);" data_def="url(../img/list-2.png)" data_hover="url(../img/list-2-1.png)"></i>
                         <a target="_blank" href=""><em>/</em><span>安全防护</span></a>
                         <a target="_blank" href=""><em>/</em><span>视频监控设备</span></a>
                         <a target="_blank" href=""><em>/</em><span>防盗报警设备</span></a>
@@ -124,12 +124,12 @@
                         <a target="_blank" href=""><em>/</em><span>门禁考勤器材及系统</span></a>
                     </li>
                     <li data_code="2206" class="">
-                        <i class="" style="background: url(../img/list-3.png);" data_def="url()" data_hover="url()"></i>
+                        <i class="" style="background: url(../img/list-3.png);" data_def="url(../img/list-3.png)" data_hover="url(../img/list-3-1.png)"></i>
                         <a target="_blank" href=""><em>/</em><span>化学品及其产品</span></a>
                         <a target="_blank" href=""><em>/</em><span>化学制品</span></a>
                     </li>
                     <li data_code="4400" class="">
-                        <i class="" style="background: url(../img/list-4.png);" data_def="url()" data_hover="url()"></i>
+                        <i class="" style="background: url(../img/list-4.png);" data_def="url(../img/list-4.png)" data_hover="url(../img/list-4-1.png)"></i>
                         <a target="_blank" href=""><em>/</em><span>3C数码</span></a>
                         <a target="_blank" href=""><em>/</em><span>电脑/服务器/工作站</span></a>
                         <a target="_blank" href=""><em>/</em><span>网络设备</span></a>
@@ -137,7 +137,7 @@
                         <a target="_blank" href=""><em>/</em><span>相机/摄像机</span></a>
                     </li>
                     <li data_code="4401" class="">
-                        <i class="" style="background: url(../img/list-5.png);" data_def="url()" data_hover="url()"></i>
+                        <i class="" style="background: url(../img/list-5.png);" data_def="url(../img/list-5.png)" data_hover="url(../img/list-5-1.png)"></i>
                         <a target="_blank" href=""><em>/</em><span>办公设备/耗材</span></a>
                         <a target="_blank" href=""><em>/</em><span>办公设备</span></a>
                         <a target="_blank" href=""><em>/</em><span>办公用纸</span></a>
@@ -145,7 +145,7 @@
                         <a target="_blank" href=""><em>/</em><span>传真/通信设备</span></a>
                     </li>
                     <li data_code="4402" class="">
-                        <i class="" style="background: url(../img/list-6.png);" data_def="url()" data_hover="url()"></i>
+                        <i class="" style="background: url(../img/list-6.png);" data_def="url(../img/list-6.png)" data_hover="url(../img/list-6-1.png)"></i>
                         <a target="_blank" href=""><em>/</em><span>文化用品</span></a>
                         <a target="_blank" href=""><em>/</em><span>笔类/书写工具</span></a>
                         <a target="_blank" href=""><em>/</em><span>纸张本册</span></a>
@@ -153,7 +153,7 @@
                         <a target="_blank" href=""><em>/</em><span>收纳/陈列用品</span></a>
                     </li>
                     <li data_code="4403" class="">
-                        <i class="" style="background: url(../img/list-7.png);" data_def="url()" data_hover="url()"></i>
+                        <i class="" style="background: url(../img/list-7.png);" data_def="url(../img/list-7.png)" data_hover="url(../img/list-7.png)"></i>
                         <a target="_blank" href=""><em>/</em><span>家居建材</span></a>
                         <a target="_blank" href=""><em>/</em><span>桌/椅/凳/配件</span></a>
                         <a target="_blank" href=""><em>/</em><span>柜/展柜/配件</span></a>
@@ -161,7 +161,7 @@
                         <a target="_blank" href=""><em>/</em><span>沙发及配件</span></a>
                     </li>
                     <li data_code="4404" class="">
-                        <i class="" style="background: url(../img/list-8.png);" data_def="url()" data_hover="url()"></i>
+                        <i class="" style="background: url(../img/list-8.png);" data_def="url(../img/list-8.png)" data_hover="url(../img/list-8.png)"></i>
                         <a target="_blank" href=""><em>/</em><span>家用电器</span></a>
                         <a target="_blank" href=""><em>/</em><span>生活电器</span></a>
                         <a target="_blank" href=""><em>/</em><span>厨房电器</span></a>
@@ -169,7 +169,7 @@
                         <a target="_blank" href=""><em>/</em><span>影音电器</span></a>
                     </li>
                     <li data_code="4405" class="">
-                        <i class="" style="background: url(../img/list-9.png);" data_def="url()" data_hover="url()"></i>
+                        <i class="" style="background: url(../img/list-9.png);" data_def="url(../img/list-9.png)" data_hover="url(../img/list-9-1.png)"></i>
                         <a target="_blank" href=""><em>/</em><span>日用百货</span></a>
                         <a target="_blank" href=""><em>/</em><span>个人洗护/口腔护理</span></a>
                         <a target="_blank" href=""><em>/</em><span>居家日用</span></a>
@@ -177,7 +177,7 @@
                         <a target="_blank" href=""><em>/</em><span>餐具</span></a>
                     </li>
                     <li data_code="4406" class="">
-                        <i class="" style="background: url(../img/list-10.png);" data_def="url()" data_hover="url()"></i>
+                        <i class="" style="background: url(../img/list-10.png);" data_def="url(../img/list-10.png)" data_hover="url(../img/list-10.png)"></i>
                         <a target="_blank" href=""><em>/</em><span>食品酒水</span></a>
                         <a target="_blank" href=""><em>/</em><span>粮油米面</span></a>
                         <a target="_blank" href=""><em>/</em><span>水产肉类/蔬果/熟食</span></a>
@@ -185,7 +185,7 @@
                         <a target="_blank" href=""><em>/</em><span>方便速食</span></a>
                     </li>
                     <li data_code="4407">
-                        <i class="" style="background:url(../img/list-11.png)" data_def="url()" data_hover="url()"></i>
+                        <i class="" style="background:url(../img/list-11.png)" data_def="url(../img/list-11.png)" data_hover="url(../img/list-11-1.png)"></i>
                         <a target="_blank" href=""><em>/</em><span>劳动保护用品</span></a>
                         <a target="_blank" href=""><em>/</em><span>头部防护</span></a>
                         <a target="_blank" href=""><em>/</em><span>手部防护</span></a>
@@ -193,7 +193,7 @@
                         <a target="_blank" href=""><em>/</em><span>足部防护</span></a>
                     </li>
                     <li data_code="4408">
-                        <i class="" style="background:url(../img/list-12.png)" data_def="url()" data_hover="url()"></i>
+                        <i class="" style="background:url(../img/list-12.png)" data_def="url(../img/list-12.png)" data_hover="url(../img/list-12.png)"></i>
                         <a target="_blank" href=""><em>/</em><span>运动户外</span></a>
                         <a target="_blank" href=""><em>/</em><span>篮球</span></a>
                         <a target="_blank" href=""><em>/</em><span>乒乓球</span></a>
@@ -201,7 +201,7 @@
                         <a target="_blank" href=""><em>/</em><span>足球</span></a>
                     </li>
                     <li data_code="4409">
-                        <i class="" style="background:url(../img/list-13.png)" data_def="url()" data_hover="url()"></i>
+                        <i class="" style="background:url(../img/list-13.png)" data_def="url(../img/list-13.png)" data_hover="url(../img/list-13-1.png)"></i>
                         <a target="_blank" href=""><em>/</em><span>五金/工具</span></a>
                         <a target="_blank" href=""><em>/</em><span>扳手/冲/撬棒</span></a>
                         <a target="_blank" href=""><em>/</em><span>手动工具</span></a>
