--- a/mushiwei/brand.html
+++ b/mushiwei/brand.html
@@ -3,42 +3,42 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="../css/base.css"/>
-    <link rel="stylesheet" href="../css/index.css"/>
-    <link rel="stylesheet" href="../css/page2.css"/>
+    <link rel="stylesheet" href="css/base.css"/>
+    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/page2.css"/>
 </head>
 <body>
 <!-- top-->
 <header>
         <div>
             <div class="logo">
-                <a href=""><img src="../img/logo.png"/></a>
+                <a href=""><img src="img/logo.png"/></a>
             </div>
             <nav>
                 <ul>
                     <li>
-                        <a href="home.html">首页</a>
-                        <a href="home.html">HOME</a>
+                        <a href="index.html">首页</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li class="open">
-                        <a href="page2.html">品牌故事</a>
-                        <a href="page2.html">BRAND</a>
+                        <a href="brand.html">品牌故事</a>
+                        <a href="brand.html">BRAND</a>
                     </li>
                     <li>
-                        <a href="page3.html">产品介绍</a>
-                        <a href="page3.html">PRODUCT</a>
+                        <a href="product.html">产品介绍</a>
+                        <a href="product.html">PRODUCT</a>
                     </li>
                     <li>
-                        <a href="page4.html">最新资讯</a>
-                        <a href="page4.html">NEWS</a>
+                        <a href="news.html">最新资讯</a>
+                        <a href="news.html">NEWS</a>
                     </li>
                     <li>
-                        <a href="page5.html">联系我们</a>
-                        <a href="page5.html">CONTACT US</a>
+                        <a href="contact.html">联系我们</a>
+                        <a href="contact.html">CONTACT US</a>
                     </li>
                     <li>
-                        <a href="page6.html">招商加盟</a>
-                        <a href="page6.html">JOIN</a>
+                        <a href="join.html">招商加盟</a>
+                        <a href="join.html">JOIN</a>
                     </li>
                 </ul>
             </nav>
@@ -48,7 +48,7 @@
 <!--主体部分-->
     <section>
         <div class="bg">
-            <img src="../img/page2-bg.png" alt=""/>
+            <img src="img/page2-bg.png" alt=""/>
             <ul>
                 <li class="open1">公司简介
                     <div class="open2"></div>
@@ -72,18 +72,18 @@
                     <p>近年来，女性内衣市场的销售态势，一直是呈现蓬勃发展之势。虽然，有越来越多的品牌进入内衣市场，竞争是非常激烈，但从销售的总量来看，内衣市场的销售额是每年呈百分之二十的增长。</p>
                     <p>据调查资料显示，在内衣消费上，越来越多的女性开始追求健康和品牌化。<br>对于未来消费市场的需求，品牌在一味加大品牌投入的同时，从根本上，还是要回归需求的本质：舒适、健康。</p>
                     <p>
-                        <img src="../img/20160909065250_58132.png" alt="">
+                        <img src="img/20160909065250_58132.png" alt="">
                     </p>
                     <p>慕诗薇之所以能在竞争激烈的内衣市场脱颖而出、长盛不衰，首先在品牌设计的把控上，突出了对于<strong>健康和舒适</strong>这两点的重视，具备持续发展的潜力，成为了市场的赢家。</p>
                     <p><br>文胸是女性人体的“第二皮肤”，作为占有量最大的模杯文胸其主体填充材料决大部分是以<strong>聚氨酯（PU）</strong>海绵模压成型为主，聚氨酯海绵属于化工产品其生产过程极不环保,且其使用过程中，有可能会释放有毒，具刺激、致敏性化学物质，其结构很不透气，容易滋生细菌生长，对人体健康带来安全隐患。</p>
                     <p>
-                        <img src="../img/20160909065346_33030.png" alt=""> 
+                        <img src="img/20160909065346_33030.png" alt=""> 
                     </p>
                     <p>慕诗薇采用的是“3D直立棉”作为内衣材质，维护女性人体的第二肌肤。</p>
                     <p>3D直立棉其特殊的物理构造具有众多海绵和其他普通纤维材料不可比拟的优势。如：可循环回收使用，不会发黄，不会产生有毒物质，阻燃性能强，高回弹，高抗压，轻质感，永不变形，高透气性、高排污性，易清洁、易晾晒，不易变形，不易滋生有害细菌等。<br><strong>柔软、更轻、高透气，吸湿排汗、舒适的穿戴体验，让女性倍感呵护。</strong> </p>
                     <p>健康调性之外，时尚优雅的设计风格和款式也是穆诗雅品牌内衣受到大众女性喜爱的一个重要原因。</p>
                     <p>
-                        <img src="../img/20160909065454_51758.png" alt=""> 
+                        <img src="img/20160909065454_51758.png" alt=""> 
                     </p>
                     <p>穆诗雅产品，主要为“简约、梦幻、印象”3大系列，设计风格层出不穷，重视对细节的处理，追求最大程度上绽放女人的魅力，满足不同年龄阶段女性，对于文胸款式的不同需求。
                     </p>
@@ -94,7 +94,7 @@
                     </ul>
                     <p>秉承“爱”与“美”的品牌理念，融科技于时尚，融美学与设计，融情感于生活，为都市女性提供精致、时尚、优雅、舒适的产品和体验，展现女性的万千姿态和魅力，帮助女性做最好的自己、最美的自己。</p>
                     <p>
-                        <img src="../img/20160909070027_39875.png" alt=""> 
+                        <img src="img/20160909070027_39875.png" alt=""> 
                     </p>
                     <p>
                         <br>
@@ -107,7 +107,7 @@
                     <p>
                         秉承“年轻”与“梦幻”的品牌理念，采用精致蕾丝、奢华吊坠、鱼鳞纹独特设计彰显出美人鱼般的气质。为年轻女性提供精致、梦幻、舒适的产品和体验，展现女性的朦胧美，做最自信的自己和最年轻的女人。
                     </p>
-                    <p><img src="../img/20160909070115_61433.png" alt=""></p>
+                    <p><img src="img/20160909070115_61433.png" alt=""></p>
                     <p><br></p>
                     <ul>
                         <li>
@@ -122,7 +122,7 @@
                         <span id="__kindeditor_bookmark_start_103__" style="display:none;"></span> 
                     </p>
                     <p>
-                        <img src="../img/20160909070238_10306.png" alt=""> 
+                        <img src="img/20160909070238_10306.png" alt=""> 
                     </p>
                     <p>
                         <strong>未来，慕诗薇会持续专注于全球女性健康事业，始终贯彻“呵护、关爱”的核心理念，为大众女性提供卓越服务。以“舒适、优雅”为设计准则，引领全新的女性健康美学主义革命。成为新一代的健康养护内衣品牌！</strong> 
@@ -162,7 +162,7 @@
     <div>
         <div class="footer-l">
             <div class="footer-l-1">
-                <img src="../img/tnt_07.png" alt=""/>
+                <img src="img/tnt_07.png" alt=""/>
             </div>
             <div class="footer-l-2">
                 <a href="" class="btn">关注有惊喜</a>
@@ -185,20 +185,19 @@
         </div>
         <div class="footer-r">
             <div class="ele">
-                <img src="../img/ele.png" alt=""/>
+                <img src="img/ele.png" alt=""/>
                 <span>400-6167-998</span>
             </div>
             <div class="wl">
-                <img src="../img/cde_10.png" alt=""/>
-                <img src="../img/zaq_10.png" alt=""/>
+                <img src="img/cde_10.png" alt=""/>
+                <img src="img/zaq_10.png" alt=""/>
             </div>
         </div>
     </div>
 </footer>
 
-<script src="../js/jquery.js"></script>
+<script src="js/jquery.js"></script>
 <script>
-
     $(".bg ul li").click(function(){
         if(!$(this).hasClass("open1")){
             $(this).addClass("open1").siblings().removeClass("open1");
@@ -207,7 +206,6 @@
 
             $(".tab").eq($(this).index()).addClass("show").siblings("div").removeClass("show")
         }
-        // console.log($(this))
     })
 </script>
 </body>
