--- a/mushiwei/contact.html
+++ b/mushiwei/contact.html
@@ -3,42 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/base.css"/>
-    <link rel="stylesheet" href="../css/index.css"/>
-    <link rel="stylesheet" href="../css/page5.css"/>
+    <link rel="stylesheet" href="css/base.css"/>
+    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/page5.css"/>
 </head>
 <body>
 <!-- top-->
 <header>
         <div>
             <div class="logo">
-                <a href=""><img src="../img/logo.png"/></a>
+                <a href=""><img src="img/logo.png"/></a>
             </div>
             <nav>
                 <ul>
                     <li>
-                        <a href="home.html">首页</a>
-                        <a href="home.html">HOME</a>
+                        <a href="index.html">首页</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li>
-                        <a href="page2.html">品牌故事</a>
-                        <a href="page2.html">BRAND</a>
+                        <a href="brand.html">品牌故事</a>
+                        <a href="brand.html">BRAND</a>
                     </li>
                     <li>
-                        <a href="page3.html">产品介绍</a>
-                        <a href="page3.html">PRODUCT</a>
+                        <a href="product.html">产品介绍</a>
+                        <a href="product.html">PRODUCT</a>
                     </li>
                     <li>
-                        <a href="page4.html">最新资讯</a>
-                        <a href="page4.html">NEWS</a>
+                        <a href="news.html">最新资讯</a>
+                        <a href="news.html">NEWS</a>
                     </li>
                     <li class="open">
-                        <a href="page5.html">联系我们</a>
-                        <a href="page5.html">CONTACT US</a>
+                        <a href="contact.html">联系我们</a>
+                        <a href="contact.html">CONTACT US</a>
                     </li>
                     <li>
-                        <a href="page6.html">招商加盟</a>
-                        <a href="page6.html">JOIN</a>
+                        <a href="join.html">招商加盟</a>
+                        <a href="join.html">JOIN</a>
                     </li>
                 </ul>
             </nav>
@@ -48,10 +48,10 @@
 <!-- 轮播图-->
 <section class="car">
     <div id="owl-demo">
-        <div class="item"><img src="../img/roll-1.jpg" alt=""></div>
-        <div class="item"><img src="../img/roll-2.jpg" alt=""></div>
-        <div class="item"><img src="../img/roll-3.jpg" alt=""></div>
-        <div class="item"><img src="../img/roll-4.jpg" alt=""></div>
+        <div class="item"><img src="img/roll-1.jpg" alt=""></div>
+        <div class="item"><img src="img/roll-2.jpg" alt=""></div>
+        <div class="item"><img src="img/roll-3.jpg" alt=""></div>
+        <div class="item"><img src="img/roll-4.jpg" alt=""></div>
     </div>
 </section>
 
@@ -76,7 +76,7 @@
             <p>网址 ：WWW.MSWBRA.COM</p>
 
             <p>官方微信</p>
-            <img src="../img/zcgb_03.png" alt=""/>
+            <img src="img/zcgb_03.png" alt=""/>
         </div>
         <div class="sec-1-r">
             <form action="">
@@ -90,8 +90,8 @@
             </form>
         </div>
     </div>
-    <img class="sec-1-t" src="../img/dasd_03.png" alt=""/>
-    <img class="sec-1-m" src="../img/vrqwe_03.png" alt=""/>
+    <img class="sec-1-t" src="img/dasd_03.png" alt=""/>
+    <img class="sec-1-m" src="img/vrqwe_03.png" alt=""/>
 </section>
 
 
@@ -103,7 +103,7 @@
     <div>
         <div class="footer-l">
             <div class="footer-l-1">
-                <img src="../img/tnt_07.png" alt=""/>
+                <img src="img/tnt_07.png" alt=""/>
             </div>
             <div class="footer-l-2">
                 <a href="" class="btn">关注有惊喜</a>
@@ -126,28 +126,20 @@
         </div>
         <div class="footer-r">
             <div class="ele">
-                <img src="../img/ele.png" alt=""/>
+                <img src="img/ele.png" alt=""/>
                 <span>400-6167-998</span>
             </div>
             <div class="wl">
-                <img src="../img/cde_10.png" alt=""/>
-                <img src="../img/zaq_10.png" alt=""/>
+                <img src="img/cde_10.png" alt=""/>
+                <img src="img/zaq_10.png" alt=""/>
             </div>
         </div>
     </div>
 </footer>
 
 
-<script src="../js/jquery.js"></script>
-<script src="../js/owl.carousel.min.js"></script>
-<script>
-    $("#owl-demo").owlCarousel({
-        navigation: false,
-        slideSpeed: 300,
-        paginationSpeed: 400,
-        autoPlay: true,
-        singleItem: true
-    });
-</script>
+<script src="js/jquery.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/common.js"></script>
 </body>
 </html>
