--- a/mushiwei/index.html
+++ b/mushiwei/index.html
@@ -3,42 +3,42 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="../css/base.css"/>
-    <link rel="stylesheet" href="../css/index.css"/>
-    <link rel="stylesheet" href="../css/home.css"/>
+    <link rel="stylesheet" href="css/base.css"/>
+    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/home.css"/>
 </head>
 <body>
 <!-- top-->
     <header>
         <div>
             <div class="logo">
-                <a href=""><img src="../img/logo.png"/></a>
+                <a href=""><img src="img/logo.png"/></a>
             </div>
             <nav>
                 <ul>
                     <li class="open">
-                        <a href="home.html">首页</a>
-                        <a href="home.html">HOME</a>
+                        <a href="index.html">首页</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li>
-                        <a href="page2.html">品牌故事</a>
-                        <a href="page2.html">BRAND</a>
+                        <a href="brand.html">品牌故事</a>
+                        <a href="brand.html">BRAND</a>
                     </li>
                     <li>
-                        <a href="page3.html">产品介绍</a>
-                        <a href="page3.html">PRODUCT</a>
+                        <a href="product.html">产品介绍</a>
+                        <a href="product.html">PRODUCT</a>
                     </li>
                     <li>
-                        <a href="page4.html">最新资讯</a>
-                        <a href="page4.html">NEWS</a>
+                        <a href="news.html">最新资讯</a>
+                        <a href="news.html">NEWS</a>
                     </li>
                     <li>
-                        <a href="page5.html">联系我们</a>
-                        <a href="page5.html">CONTACT US</a>
+                        <a href="contact.html">联系我们</a>
+                        <a href="contact.html">CONTACT US</a>
                     </li>
                     <li>
-                        <a href="page6.html">招商加盟</a>
-                        <a href="page6.html">JOIN</a>
+                        <a href="join.html">招商加盟</a>
+                        <a href="join.html">JOIN</a>
                     </li>
                 </ul>
             </nav>
@@ -49,10 +49,10 @@
 <!-- 轮播图-->
     <section class="car">
         <div id="owl-demo">
-            <div class="item"><img src="../img/roll-1.jpg" alt=""></div>
-            <div class="item"><img src="../img/roll-2.jpg" alt=""></div>
-            <div class="item"><img src="../img/roll-3.jpg" alt=""></div>
-            <div class="item"><img src="../img/roll-4.jpg" alt=""></div>
+            <div class="item"><img src="img/roll-1.jpg" alt=""></div>
+            <div class="item"><img src="img/roll-2.jpg" alt=""></div>
+            <div class="item"><img src="img/roll-3.jpg" alt=""></div>
+            <div class="item"><img src="img/roll-4.jpg" alt=""></div>
         </div>
     </section>
 
@@ -65,13 +65,13 @@
                     <p>产品展示</p>
                     <p>PRODUCTS</p>
                 </div>
-                <img src="../img/cpzh.png" alt=""/>
+                <img src="img/cpzh.png" alt=""/>
             </div>
             <div class="pic">
                 <!--<div>-->
-                    <img src="../img/ttt_03.png"/>
-                    <img src="../img/ada_03.png"/>
-                    <img src="../img/asdadw_03.png"/>
+                    <img src="img/ttt_03.png"/>
+                    <img src="img/ada_03.png"/>
+                    <img src="img/asdadw_03.png"/>
                 <!--</div>-->
             </div>
         </div>
@@ -89,10 +89,10 @@
 
                     <p>LATEST NEWS</p>
                 </div>
-                <img src="../img/zx.png" alt=""/>
+                <img src="img/zx.png" alt=""/>
             </div>
             <div class="sec-2-l">
-                <img src="../img/zxc_03.png"/>
+                <img src="img/zxc_03.png"/>
                 <div>
                     <span>2016-09-18 11:03:20 </span>
                     <p class="sec-2-txt"> 慕诗薇首获好成绩！值得庆祝！！</p>
@@ -146,21 +146,21 @@
 
                     <p>ABOUT BRAND</p>
                 </div>
-                <img src="../img/cpzh.png" alt=""/>
+                <img src="img/cpzh.png" alt=""/>
             </div>
             <div class="sec-3-l">
                 <div class="video">
-                    <img src="../img/video.png" alt=""/>
-                    <img src="../img/video-p.png" alt=""/>
+                    <img src="img/video.png" alt=""/>
+                    <img src="img/video-p.png" alt=""/>
                 </div>
                 <div class="video-b">
-                    <img src="../img/scbv_03.png" alt=""/>
+                    <img src="img/scbv_03.png" alt=""/>
                     <span>专注无钢圈健康内衣</span>
                 </div>
             </div>
             <div class="sec-3-r">
                 <div class="sec-3-r1">
-                    <img src="../img/trg_03.png" alt=""/>
+                    <img src="img/trg_03.png" alt=""/>
                     <div>
                         <p>COMPANY</p>
                         <p>慕诗薇，是湖南为赢天下商贸有限公司旗下的致命内衣品牌。长期以来，公司以心理业、
@@ -195,7 +195,7 @@
         <div>
             <div class="footer-l">
                 <div class="footer-l-1">
-                    <img src="../img/tnt_07.png" alt=""/>
+                    <img src="img/tnt_07.png" alt=""/>
                 </div>
                 <div class="footer-l-2">
                     <a href="" class="btn">关注有惊喜</a>
@@ -218,29 +218,22 @@
             </div>
             <div class="footer-r">
                 <div class="ele">
-                    <img src="../img/ele.png" alt=""/>
+                    <img src="img/ele.png" alt=""/>
                     <span>400-6167-998</span>
                 </div>
                 <div class="wl">
-                    <img src="../img/cde_10.png" alt=""/>
-                    <img src="../img/zaq_10.png" alt=""/>
+                    <img src="img/cde_10.png" alt=""/>
+                    <img src="img/zaq_10.png" alt=""/>
                 </div>
             </div>
         </div>
     </footer>
 
 
-    <script src="../js/jquery.js"></script>
-    <script src="../js/owl.carousel.min.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/common.js"></script>
 <script>
-    $("#owl-demo").owlCarousel({
-        navigation: false,
-        slideSpeed: 300,
-        paginationSpeed: 400,
-        autoPlay: true,
-        singleItem: true
-    });
-
     $(".sec-3-r2 div").click(function(){
         if(!$(this).hasClass("bgc_a363ca")){
             $(this).addClass("bgc_a363ca").siblings().removeClass("bgc_a363ca")
