--- a/mushiwei/join.html
+++ b/mushiwei/join.html
@@ -3,42 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/base.css"/>
-    <link rel="stylesheet" href="../css/index.css"/>
-    <link rel="stylesheet" href="../css/page6.css"/>
+    <link rel="stylesheet" href="css/base.css"/>
+    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/page6.css"/>
 </head>
 <body>
 <!-- top-->
 <header>
         <div>
             <div class="logo">
-                <a href=""><img src="../img/logo.png"/></a>
+                <a href=""><img src="img/logo.png"/></a>
             </div>
             <nav>
                 <ul>
                     <li>
-                        <a href="home.html">首页</a>
-                        <a href="home.html">HOME</a>
+                        <a href="index.html">首页</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li>
-                        <a href="page2.html">品牌故事</a>
-                        <a href="page2.html">BRAND</a>
+                        <a href="brand.html">品牌故事</a>
+                        <a href="brand.html">BRAND</a>
                     </li>
                     <li>
-                        <a href="page3.html">产品介绍</a>
-                        <a href="page3.html">PRODUCT</a>
+                        <a href="product.html">产品介绍</a>
+                        <a href="product.html">PRODUCT</a>
                     </li>
                     <li>
-                        <a href="page4.html">最新资讯</a>
-                        <a href="page4.html">NEWS</a>
+                        <a href="news.html">最新资讯</a>
+                        <a href="news.html">NEWS</a>
                     </li>
                     <li>
-                        <a href="page5.html">联系我们</a>
-                        <a href="page5.html">CONTACT US</a>
+                        <a href="contact.html">联系我们</a>
+                        <a href="contact.html">CONTACT US</a>
                     </li>
                     <li class="open">
-                        <a href="page6.html">招商加盟</a>
-                        <a href="page6.html">JOIN</a>
+                        <a href="join.html">招商加盟</a>
+                        <a href="join.html">JOIN</a>
                     </li>
                 </ul>
             </nav>
@@ -48,10 +48,10 @@
 <!-- 轮播图-->
 <section class="car">
     <div id="owl-demo">
-        <div class="item"><img src="../img/roll-1.jpg" alt=""></div>
-        <div class="item"><img src="../img/roll-2.jpg" alt=""></div>
-        <div class="item"><img src="../img/roll-3.jpg" alt=""></div>
-        <div class="item"><img src="../img/roll-4.jpg" alt=""></div>
+        <div class="item"><img src="img/roll-1.jpg" alt=""></div>
+        <div class="item"><img src="img/roll-2.jpg" alt=""></div>
+        <div class="item"><img src="img/roll-3.jpg" alt=""></div>
+        <div class="item"><img src="img/roll-4.jpg" alt=""></div>
     </div>
 </section>
 
@@ -62,27 +62,27 @@
 
     <div class="sec-1">
         <div class="sec-1-l">
-            <img src="../img/igi_03.png" alt=""/>
+            <img src="img/igi_03.png" alt=""/>
             <p class="txt">3D直立棉无痕无钢圈文胸</p>
             <p class="txt">轻薄透气 自由呼吸</p>
 
-            <p class="txt1"><img src="../img/tmk_03.png" alt=""/>环保，对人体无害</p>
+            <p class="txt1"><img src="img/tmk_03.png" alt=""/>环保，对人体无害</p>
 
-            <p class="txt1"><img src="../img/tmk_03.png" alt=""/>不变形</p>
+            <p class="txt1"><img src="img/tmk_03.png" alt=""/>不变形</p>
 
-            <p class="txt1"><img src="../img/tmk_03.png" alt=""/>感温材料，塑身美体</p>
+            <p class="txt1"><img src="img/tmk_03.png" alt=""/>感温材料，塑身美体</p>
         </div>
         <div class="sec-1-r">
-            <img src="../img/zm_1.png" alt=""/>
+            <img src="img/zm_1.png" alt=""/>
         </div>
     </div>
 
 
 
     <div class="sec-2">
-        <img src="../img/zm_2.png" alt=""/>
+        <img src="img/zm_2.png" alt=""/>
         <div>
-            <img src="../img/vbs_03.png" alt=""/>
+            <img src="img/vbs_03.png" alt=""/>
             <ul>
                 <li>舒适</li>
                 <li>轻盈</li>
@@ -95,14 +95,14 @@
 
     <div class="sec-3">
         <div class="sec-3-l">
-            <img src="../img/vdaw_03.png" alt=""/>
+            <img src="img/vdaw_03.png" alt=""/>
 
             <p>侧推集中 坚挺美胸更丰满</p>
 
             <p>塑造百分百完美身材更妩媚动人</p>
         </div>
         <div class="sec-3-r">
-            <img src="../img/zm-3.png" alt=""/>
+            <img src="img/zm-3.png" alt=""/>
         </div>
     </div>
 
@@ -122,8 +122,8 @@
             新思路/新模式
         </div>
         <div>
-            <img src="../img/cvsd_03.png" alt=""/>
-            <img src="../img/cqwq_03.png" alt=""/>
+            <img src="img/cvsd_03.png" alt=""/>
+            <img src="img/cqwq_03.png" alt=""/>
         </div>
     </div>
 
@@ -132,7 +132,7 @@
         <div class="bg">
             招商风采
         </div>
-        <img src="../img/cwq_03.png" alt=""/>
+        <img src="img/cwq_03.png" alt=""/>
     </div>
 
 
@@ -157,7 +157,7 @@
     <div>
         <div class="footer-l">
             <div class="footer-l-1">
-                <img src="../img/tnt_07.png" alt=""/>
+                <img src="img/tnt_07.png" alt=""/>
             </div>
             <div class="footer-l-2">
                 <a href="" class="btn">关注有惊喜</a>
@@ -180,27 +180,19 @@
         </div>
         <div class="footer-r">
             <div class="ele">
-                <img src="../img/ele.png" alt=""/>
+                <img src="img/ele.png" alt=""/>
                 <span>400-6167-998</span>
             </div>
             <div class="wl">
-                <img src="../img/cde_10.png" alt=""/>
-                <img src="../img/zaq_10.png" alt=""/>
+                <img src="img/cde_10.png" alt=""/>
+                <img src="img/zaq_10.png" alt=""/>
             </div>
         </div>
     </div>
 </footer>
 
-<script src="../js/jquery.js"></script>
-<script src="../js/owl.carousel.min.js"></script>
-<script>
-    $("#owl-demo").owlCarousel({
-        navigation: false,
-        slideSpeed: 300,
-        paginationSpeed: 400,
-        autoPlay: true,
-        singleItem: true
-    });
-</script>
+<script src="js/jquery.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/common.js"></script>
 </body>
 </html>
