--- a/mushiwei/news.html
+++ b/mushiwei/news.html
@@ -3,42 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/base.css"/>
-    <link rel="stylesheet" href="../css/index.css"/>
-    <link rel="stylesheet" href="../css/page4.css"/>
+    <link rel="stylesheet" href="css/base.css"/>
+    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/page4.css"/>
 </head>
 <body>
 <!-- top-->
 <header>
         <div>
             <div class="logo">
-                <a href=""><img src="../img/logo.png"/></a>
+                <a href=""><img src="img/logo.png"/></a>
             </div>
             <nav>
                 <ul>
                     <li>
-                        <a href="home.html">首页</a>
-                        <a href="home.html">HOME</a>
+                        <a href="index.html">首页</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li>
-                        <a href="page2.html">品牌故事</a>
-                        <a href="page2.html">BRAND</a>
+                        <a href="brand.html">品牌故事</a>
+                        <a href="brand.html">BRAND</a>
                     </li>
                     <li>
-                        <a href="page3.html">产品介绍</a>
-                        <a href="page3.html">PRODUCT</a>
+                        <a href="product.html">产品介绍</a>
+                        <a href="product.html">PRODUCT</a>
                     </li>
                     <li class="open">
-                        <a href="page4.html">最新资讯</a>
-                        <a href="page4.html">NEWS</a>
+                        <a href="news.html">最新资讯</a>
+                        <a href="news.html">NEWS</a>
                     </li>
                     <li>
-                        <a href="page5.html">联系我们</a>
-                        <a href="page5.html">CONTACT US</a>
+                        <a href="contact.html">联系我们</a>
+                        <a href="contact.html">CONTACT US</a>
                     </li>
                     <li>
-                        <a href="page6.html">招商加盟</a>
-                        <a href="page6.html">JOIN</a>
+                        <a href="join.html">招商加盟</a>
+                        <a href="join.html">JOIN</a>
                     </li>
                 </ul>
             </nav>
@@ -48,10 +48,10 @@
 <!-- 轮播图-->
     <section class="car">
         <div id="owl-demo">
-            <div class="item"><img src="../img/roll-1.jpg" alt=""></div>
-            <div class="item"><img src="../img/roll-2.jpg" alt=""></div>
-            <div class="item"><img src="../img/roll-3.jpg" alt=""></div>
-            <div class="item"><img src="../img/roll-4.jpg" alt=""></div>
+            <div class="item"><img src="img/roll-1.jpg" alt=""></div>
+            <div class="item"><img src="img/roll-2.jpg" alt=""></div>
+            <div class="item"><img src="img/roll-3.jpg" alt=""></div>
+            <div class="item"><img src="img/roll-4.jpg" alt=""></div>
         </div>
     </section>
 
@@ -62,7 +62,7 @@
 <section class="sec-1">
     <div>
         <!-- <a href=""></a> -->
-        <a href="page4-1.html">
+        <a href="news1.html">
             <div class="sec-1-l">
                 <p>微商优势</p>
                 <p>1 、 移动互联网的力量是非常强大的，微商继承了移动互联网的所有优点，交互非常广而且紧密，及时，频率高， 沟通及时便捷，无孔不入。充分发挥了先进的网络优势，不管是找客户，找分销商，品牌推广都可以...</p>
@@ -72,7 +72,7 @@
                 <p>2016-09</p>
             </div>
         </a>
-        <a href="page4-1.html">
+        <a href="news1.html">
             <div class="sec-1-l">
                 <p>微商优势</p>
                 <p>1 、 移动互联网的力量是非常强大的，微商继承了移动互联网的所有优点，交互非常广而且紧密，及时，频率高， 沟通及时便捷，无孔不入。充分发挥了先进的网络优势，不管是找客户，找分销商，品牌推广都可以...</p>
@@ -82,7 +82,7 @@
                 <p>2016-09</p>
             </div>
         </a>
-        <a href="page4-1.html">
+        <a href="news1.html">
             <div class="sec-1-l">
                 <p>内衣清洗和两室阿德正确的方法有哪些</p>
                 <p>很多女性朋友总有这样的苦恼，文胸不知如何清洗和晾晒。
@@ -104,7 +104,7 @@
     <div>
         <div class="footer-l">
             <div class="footer-l-1">
-                <img src="../img/tnt_07.png" alt=""/>
+                <img src="img/tnt_07.png" alt=""/>
             </div>
             <div class="footer-l-2">
                 <a href="" class="btn">关注有惊喜</a>
@@ -127,27 +127,19 @@
         </div>
         <div class="footer-r">
             <div class="ele">
-                <img src="../img/ele.png" alt=""/>
+                <img src="img/ele.png" alt=""/>
                 <span>400-6167-998</span>
             </div>
             <div class="wl">
-                <img src="../img/cde_10.png" alt=""/>
-                <img src="../img/zaq_10.png" alt=""/>
+                <img src="img/cde_10.png" alt=""/>
+                <img src="img/zaq_10.png" alt=""/>
             </div>
         </div>
     </div>
 </footer>
 
-<script src="../js/jquery.js"></script>
-<script src="../js/owl.carousel.min.js"></script>
-<script>
-    $("#owl-demo").owlCarousel({
-        navigation: false,
-        slideSpeed: 300,
-        paginationSpeed: 400,
-        autoPlay: true,
-        singleItem: true
-    });
-</script>
+<script src="js/jquery.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/common.js"></script>
 </body>
 </html>
