--- a/mushiwei/product.html
+++ b/mushiwei/product.html
@@ -3,42 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/base.css"/>
-    <link rel="stylesheet" href="../css/index.css"/>
-    <link rel="stylesheet" href="../css/page3.css"/>
+    <link rel="stylesheet" href="css/base.css"/>
+    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/page3.css"/>
 </head>
 <body>
 <!-- top-->
 <header>
         <div>
             <div class="logo">
-                <a href=""><img src="../img/logo.png"/></a>
+                <a href=""><img src="img/logo.png"/></a>
             </div>
             <nav>
                 <ul>
                     <li>
-                        <a href="home.html">首页</a>
-                        <a href="home.html">HOME</a>
+                        <a href="index.html">首页</a>
+                        <a href="index.html">HOME</a>
                     </li>
                     <li>
-                        <a href="page2.html">品牌故事</a>
-                        <a href="page2.html">BRAND</a>
+                        <a href="brand.html">品牌故事</a>
+                        <a href="brand.html">BRAND</a>
                     </li>
                     <li class="open">
-                        <a href="page3.html">产品介绍</a>
-                        <a href="page3.html">PRODUCT</a>
+                        <a href="product.html">产品介绍</a>
+                        <a href="product.html">PRODUCT</a>
                     </li>
                     <li>
-                        <a href="page4.html">最新资讯</a>
-                        <a href="page4.html">NEWS</a>
+                        <a href="news.html">最新资讯</a>
+                        <a href="news.html">NEWS</a>
                     </li>
                     <li>
-                        <a href="page5.html">联系我们</a>
-                        <a href="page5.html">CONTACT US</a>
+                        <a href="contact.html">联系我们</a>
+                        <a href="contact.html">CONTACT US</a>
                     </li>
                     <li>
-                        <a href="page6.html">招商加盟</a>
-                        <a href="page6.html">JOIN</a>
+                        <a href="join.html">招商加盟</a>
+                        <a href="join.html">JOIN</a>
                     </li>
                 </ul>
             </nav>
@@ -49,10 +49,10 @@
 <!-- 轮播图-->
 <section class="car">
     <div id="owl-demo">
-        <div class="item"><img src="../img/roll-1.jpg" alt=""></div>
-        <div class="item"><img src="../img/roll-2.jpg" alt=""></div>
-        <div class="item"><img src="../img/roll-3.jpg" alt=""></div>
-        <div class="item"><img src="../img/roll-4.jpg" alt=""></div>
+        <div class="item"><img src="img/roll-1.jpg" alt=""></div>
+        <div class="item"><img src="img/roll-2.jpg" alt=""></div>
+        <div class="item"><img src="img/roll-3.jpg" alt=""></div>
+        <div class="item"><img src="img/roll-4.jpg" alt=""></div>
     </div>
 </section>
 
@@ -69,7 +69,7 @@
                 <p>产品展示</p>
                 <p>PRODUCTS</p>
             </div>
-            <img src="../img/cpzh.png" alt=""/>
+            <img src="img/cpzh.png" alt=""/>
         </div>
         <ul class="sec-1-t">
             <li class="bgc_b38dca">美人鱼系列</li>
@@ -77,19 +77,19 @@
             <li>红运当头</li>
         </ul>
         <div class="pic-list show">
-            <img src="../img/ttt_03.png"/>
-            <img src="../img/ada_03.png"/>
-            <img src="../img/asdadw_03.png"/>
+            <img src="img/ttt_03.png"/>
+            <img src="img/ada_03.png"/>
+            <img src="img/asdadw_03.png"/>
         </div>
         <div class="pic-list">
-            <img src="../img/zm_4.jpg"/>
-            <img src="../img/zm_5.jpg"/>
-            <img src="../img/zm_6.jpg"/>
+            <img src="img/zm_4.jpg"/>
+            <img src="img/zm_5.jpg"/>
+            <img src="img/zm_6.jpg"/>
         </div>
         <div class="pic-list">
-            <img src="../img/ada_03.png"/>
-            <img src="../img/zm_4.jpg"/>
-            <img src="../img/ttt_03.png"/>
+            <img src="img/ada_03.png"/>
+            <img src="img/zm_4.jpg"/>
+            <img src="img/ttt_03.png"/>
         </div>
     </div>
 </section>
@@ -103,7 +103,7 @@
     <div>
         <div class="footer-l">
             <div class="footer-l-1">
-                <img src="../img/tnt_07.png" alt=""/>
+                <img src="img/tnt_07.png" alt=""/>
             </div>
             <div class="footer-l-2">
                 <a href="" class="btn">关注有惊喜</a>
@@ -126,28 +126,22 @@
         </div>
         <div class="footer-r">
             <div class="ele">
-                <img src="../img/ele.png" alt=""/>
+                <img src="img/ele.png" alt=""/>
                 <span>400-6167-998</span>
             </div>
             <div class="wl">
-                <img src="../img/cde_10.png" alt=""/>
-                <img src="../img/zaq_10.png" alt=""/>
+                <img src="img/cde_10.png" alt=""/>
+                <img src="img/zaq_10.png" alt=""/>
             </div>
         </div>
     </div>
 </footer>
 
 
-<script src="../js/jquery.js"></script>
-<script src="../js/owl.carousel.min.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/common.js"></script>
 <script>
-    $("#owl-demo").owlCarousel({
-        navigation: false,
-        slideSpeed: 300,
-        paginationSpeed: 400,
-        autoPlay: true,
-        singleItem: true
-    });
     $(".sec-1-t li").click(function(){
         if(!$(this).hasClass("bgc_b38dca")){
             $(this).addClass("bgc_b38dca").siblings().removeClass("bgc_b38dca")
