--- a/mushiwei/index.html
+++ b/mushiwei/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-    <link rel="stylesheet" href="css/base.css"/>
-    <link rel="stylesheet" href="css/index.css"/>
-    <link rel="stylesheet" href="css/home.css"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta content="慕诗薇，内衣，文胸，内衣品牌大全，无钢圈内衣，舒服的内衣" name="keywords">
+    <meta content="慕诗薇网上预约试穿，慕诗薇为您打造轻薄优雅，舒适自在的创新内衣感受!向不合适的内衣say no!即刻在线预约至慕诗薇门店试穿，还有更多轻丰系列新品上市" name="description">
+    <meta http-equiv="Content-Script-Type" content="text/javascript">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+    <link rel="shortcut icon" href="img/favicon.png">
+    <meta name="title" content="首页 | 慕诗薇">
+    <title>首页 | 慕诗薇</title>
+    <link rel="stylesheet" media="screen" href="css/base.css"/>
+    <link rel="stylesheet" media="screen" href="css/index.css"/>
+    <link rel="stylesheet" media="screen" href="css/common.css"/>
+    <link rel="stylesheet" media="screen" href="css/owl.theme.css">
+    <script src="js/jquery-1.7.2.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/layer.js"></script>
 </head>
 <body>
 <!-- top-->
@@ -221,25 +231,30 @@
                     <img src="img/ele.png" alt=""/>
                     <span>400-6167-998</span>
                 </div>
-                <div class="wl">
-                    <img src="img/cde_10.png" alt=""/>
-                    <img src="img/zaq_10.png" alt=""/>
-                </div>
+            <div class="wl">
+                <a href=""><img src="img/cde_10.png" alt=""/></a>
+                <a href=""><img src="img/zaq_10.png" alt=""/></a>
+            </div>
             </div>
         </div>
     </footer>
 
-
-    <script src="js/jquery.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/common.js"></script>
 <script>
+$(function(){
+    $("#owl-demo").owlCarousel({
+        navigation: false,
+        slideSpeed: 300,
+        paginationSpeed: 400,
+        autoPlay: true,
+        singleItem: true
+    });
     $(".sec-3-r2 div").click(function(){
         if(!$(this).hasClass("bgc_a363ca")){
             $(this).addClass("bgc_a363ca").siblings().removeClass("bgc_a363ca")
             $(".sec-3-r1").children("div").eq($(this).index()).removeClass("hide").siblings("div").addClass("hide")
         }
     })
+})
 </script>
 </body>
 </html>
